# codefair-app

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  app.yml  bot.ps1  bot.sh  codemeta-schema.json  codemeta.json  db-docker-compose.yaml  dev.ps1  dev.sh  index.js  nixpacks.toml  old-package.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  ui.ps1  ui.sh
.github/workflows/: deploy-main.yml  deploy-staging.yml
api/github/webhooks/: index.js
bot/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.staging  app.js  app.yml  db.js  dev-migrate.ts  index.js  index.ts  main.js  main.ts  migrate.ts  nixpacks.toml  package.json  pnpm-lock.yaml  prettier.config.js  transfer-postgres.js  tsconfig.json
bot/.kamal/: secrets
bot/api/github/: index.js  webhooks.js
bot/archival/: index.js
bot/citation/: index.js
bot/codemeta/: index.js
bot/commands/actions/: index.js
bot/compliance-checks/: index.js
bot/config/: deploy-staging.yml  deploy.yml
bot/cwl/: index.js
bot/handlers/: installation.js  issue.js  pullRequest.js  push.js
bot/license/: index.js
bot/metadata/: index.js
bot/migrations/: 1.ts
bot/prisma/: prismas-baseline-migration.ts  schema.prisma
bot/public/: codefair.html  fairsoftware.html  index.html
bot/scripts/: analytics.ts  prismaM.ts
bot/test/: index.test.js
bot/utils/: helpers.js  logwatch.js
nuxt-app/: package.json  prettier.config.js  tailwind.config.js
nuxt-app/pages/: codefair.vue  fairsoftware.vue
plugins/: naive.js
public/: codefair.html  fairsoftware.html  index.html
scripts/: deploy.ts  prismas-baseline-migration.ts
tsbot/: LICENSE  README.md  package-lock.json  package.json
ui/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  app.config.ts  app.vue  components.d.ts  compose.yml  error.vue  nuxt.config.ts  package.json  prettier.config.cjs  tailwind.config.js
ui/.kamal/: secrets
ui/components/: ProfileStatus.vue
ui/composables/: auth.ts
ui/config/: deploy.yml
ui/layouts/: default.vue  public.vue
ui/lib/: utils.ts
ui/middleware/: auth.global.ts  protected.ts
ui/middlware/: auth.global.ts
ui/pages/: codefair.vue  fairsoftware.vue  faq.vue  index.vue  login.vue  profile.vue
ui/plugins/: naive.server.js  naive.ts
ui/prisma/: prismas-baseline-migration.ts  schema.prisma
ui/scripts/: analytics.ts  prisma-migrate.ts  smee.mjs
ui/stores/: breadcrumbs.ts
ui/types/: codeMetadata.d.ts  codeMetadata.ts  codeofconduct.d.ts  common.d.ts  contributing.d.ts  cwl.d.ts  cwlValidation.d.ts  github.d.ts  license.d.ts  readme.d.ts  statItem.d.ts  zenodo.d.ts
ui/utils/: TargetBlankExtension.ts
validator/: .dockerignore  .flake8  .flaskenv  .markdownlint.json  .pydocstyle.ini  .tool-versions  Dockerfile  LICENSE  README.md  app.py  codemeta-schema.json  codemeta-schema2.0.json  config.py  docker-compose.yaml  requirements.txt
validator-api/: .gitignore  .pylint.ini  pyproject.toml
validator-api/apis/: __init__.py
validator/.kamal/: secrets
validator/apis/: __init__.py  test.http
validator/config/: deploy.yml
(+185 files in other folders)
